--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ google-generativeai==0.3.2
 Pillow==10.2.0
 Werkzeug==3.0.1
 Flask-Limiter==3.5.1
-redis==5.0.3 
+redis==5.0.3
+gunicorn==21.2.0
+python-magic==0.4.27 
